ベース作った

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<p>おはよう</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Todo</title>
+  </head>
+  <body>
+    <div>
+      <input type="text" id="input" />
+      <button id="addtodo">タスクを追加</button>
+    </div>
+  </body>
+</html>
