FontAwesomeをいれました

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -32,7 +32,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
+          <div class="navbar-nav ms-auto">
             <a class="nav-link active" aria-current="page" href="#">ホーム</a>
             <a class="nav-link" href="#">検索</a>
             <a class="nav-link" href="#">カート</a>
